Fix contrast

--- a/week03/styles/design.css
+++ b/week03/styles/design.css
@@ -9,6 +9,12 @@ footer {
 	margin: 0 auto;
 }
 
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+}
+
 marquee {
 	padding: 1rem;
 	background-color: #eee;
@@ -23,6 +29,7 @@ main {
 }
 
 h2 {
+    grid-column: 1 / 3;
 	color: navy;
 	text-align: left;
 }
@@ -32,14 +39,15 @@ article p {
 }
 
 .callout {
-	color: #777;
-	background-color: #702963;
+	color: #fef97c;
+	background-color: #8a0571;
     padding: 8px;
+    grid-column: 1 / 3;
 }
 
 footer {
 	margin-top: 1rem;
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
 	font-size: smaller;
-	text-align: right;
+	text-align: left;
 }
